tests/ui/thread-local/thread-local-borrow-past-function-end.stderr
error[E0712]: thread-local variable borrowed past end of function
  --> $DIR/issue-17954.rs:7:13
   |
LL |     let a = &FOO;
   |             ^^^^ thread-local variables cannot be borrowed beyond the end of the function
...
LL | }
   | - end of enclosing function is here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0712`.
